--- a/myISSIP.html
+++ b/myISSIP.html
@@ -20,7 +20,7 @@
     <div class="section">
       <h2>Welcome to the International Society of Service Innovation Professionals (ISSIP) community!</h2>
       <p><strong>Book title:</strong> Service Innovation in the AI Era</p>
-      <p><strong>Book Link:</strong> <a href="ISSIP Handbook.pdf" download>Link</a></p>
+      <p><strong>ISSIP HandBook Link:</strong> <a href="ISSIP Handbook.pdf" download>Link</a></p>
       <p>This course will introduce you to key concepts of service innovation, especially in the context of Artificial Intelligence (AI).</p>
       <h3>🧠 Pre-Test</h3>
       <ul>
