--- a/myISSIP.html
+++ b/myISSIP.html
@@ -9,9 +9,9 @@
 
   <div class="navbar">
     <button onclick="showPage('introduction')">Introduction</button>
-    <button onclick="showPage('module1')">Module 1</button>
-    <button onclick="showPage('module2')">Module 2</button>
-    <button onclick="showPage('module3')">Module 3</button>
+    <button onclick="showPage('module1')">Section A</button>
+    <button onclick="showPage('module2')">Section B</button>
+    <button onclick="showPage('module3')">Section C</button>
     <button onclick="showPage('conclusion')">Conclusion</button>
   </div>
 
@@ -19,8 +19,6 @@
   <div class="page active" id="introduction">
     <div class="section">
       <h2>Welcome to the International Society of Service Innovation Professionals (ISSIP) community!</h2>
-      <p><strong>Book title:</strong> Service Innovation in the AI Era</p>
-      <p><strong>ISSIP HandBook Link:</strong> <a href="ISSIP Handbook.pdf" download>Link</a></p>
       <p>This course will introduce you to key concepts of service innovation, especially in the context of Artificial Intelligence (AI).</p>
       <h3>🧠 Pre-Test</h3>
       <ul>
@@ -31,13 +29,19 @@
       </li>
     <li>Founded in 2012, ISSIP provides a platform for community engagement, knowledge sharing, and career development.</li>
   <li>We aim to create a win-win environment for all stakeholders through value co-creation activities.</li></ul>
-  <h3>Course Objectives:</h3>
-  <ul><li>Understand the core concepts of service and service innovation.
-  </li>
-  <li>Learn about the impact of AI on service.</li>
-  <li>Familiarize yourself with the ISSIP community, its resources, and code of conduct.</li>
+  <h3>🎯 Course Overview:</h3>
+  <h4>Section A: Concepts - Ten Learning Items</h4>
+  <ul><li>Concepts are primarily based on the book "Service in the AI Era" by Spohrer, Maglio, Vargo, and Warg. </li>
+  <li>A free copy of the book can be obtained by sending a connection request to Jim Spohrer on LinkedIn.</li>
+  <li>URL: <a href="https://www.linkedin.com/in/spohrer/">Link</a> </li>
   </ul>
-    </div>
+  <h4>Section B: ISSIP - Ten Learning Items</h4>
+  <ul><li>ISSIP content is drawn from the ISSIP Handbook, accessible on the ISSIP.org website. </li>
+  <li>Book: <i>Service Innovation in the AI Era</i> <a href="ISSIP Handbook.pdf" download>Link</a> </li>
+  <li>ISSIP Website: <a href="https://issip.org/">Link</a></li>
+  </ul>
+<h4>Section C: Participation - Ten Learning Items</h4>
+<ul><li>Participation information includes reminders and resources to help ISSIP participants engage effectively with the community. </li></ul>
   </div>
 
 
@@ -46,7 +50,7 @@
     <div class="section">
       <h2>📘 Module 1: Introduction to Service Innovation</h2>
       <img src="ethan-hu-NRTptNBkLLw-unsplash.jpg" alt="Ethan" />
-      <p><strong>Time:</strong> 5 minutes</p>
+      <p><strong>Time:</strong> 20 minutes</p>
       <p><strong>Learning Goals:</strong></p>
       <ul>
         <li>Understand the central role of service in business and society.</li>
