--- a/myISSIP.html
+++ b/myISSIP.html
@@ -181,47 +181,90 @@
   </div>
 </div>    
 <div class="concept-box">
-  <button class="toggle-btn" onclick="toggleConcept(this)">▶️ Service Practice</button>
+  <button class="toggle-btn" onclick="toggleConcept(this)">▶️ Service Research</button>
   <div class="concept-content">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Service research aims to deepen our understanding of everyday interactions to improve outcomes for individuals, organizations, and governments. </li>
+    <li>It involves the study and development of improved models to foster positive interactions and drive beneficial change in business and society.  </li>
+    <li>The service research community is globally diverse and united in its commitment to enhancing interactions and promoting positive change.  </li>
+    <li>This community is transdisciplinary, harnessing all disciplines to become better T-shaped professionals.  </li>
   </ul> 
 </div>
 </div> 
 <div class="concept-box">
-  <button class="toggle-btn" onclick="toggleConcept(this)">▶️ Service Practice</button>
+  <button class="toggle-btn" onclick="toggleConcept(this)">▶️ Service Education</button>
   <div class="concept-content">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Service education focuses on preparing the next generation to effectively learn and apply relevant models of the world.  </li>
+    <li>It includes the development of critical thinking skills and the ability to evaluate and improve upon existing models.</li>
+    <li>Educators play a vital role in equipping learners to navigate the complexities of service in the age of AI, fostering a "knowledge-rebuilding" experience and helping learners ask hard questions and challenge the validity of information.  </li>
   </ul> 
 </div>
 </div> 
-      <h4>5. Service Research</h4>
-      <p>This global field studies real-world interactions to improve service experiences. It's collaborative, transdisciplinary, and focuses on making change beneficial for all stakeholders.</p>
-  
-      <h4>6. Service Education</h4>
-      <p>Service education develops critical thinkers and doers ready for AI-enhanced systems. It fosters future-ready professionals who can evaluate and challenge models of the world.</p>
-  
-      <h4>7. AI’s Impact on Service</h4>
-      <p>AI transforms service through automation (efficiency) and augmentation (enhancing human ability). Ethical design and trust are crucial to this transformation.</p>
-  
-      <h4>8. Automation vs. Augmentation</h4>
-      <p>AI streamlines routine tasks but also empowers people to solve bigger problems. Together, they improve scalability, quality, and the future of work.</p>
-  
-      <h4>9. Role of Data</h4>
-      <p>Data fuels AI. Used ethically, it drives smarter decisions and proactive service. But it also raises concerns about privacy, bias, and transparency.</p>
-  
-      <h4>10. The Future of Service</h4>
-      <p>Human-centered, AI-powered service is the future. It demands new skills, responsible design, and innovation rooted in shared human values.</p>
-  
-      <h3>🧠 Reflection Prompt</h3>
-      <p>List 3 ways you receive or deliver a service daily. How might AI improve or complicate those interactions?</p>
+<div class="concept-box">
+  <button class="toggle-btn" onclick="toggleConcept(this)">▶️ 🎤 Activity: Interview a Service Pro</button>
+  <div class="concept-content">
+    <p>Ask someone in your life—like a teacher, barista, IT support, or delivery driver—about their role in providing service. Use these questions to guide your conversation:</p>
+    <ul>
+      <li>What makes a service experience feel great for them?</li>
+      <li>What are some common challenges they face?</li>
+      <li>Have they used any AI or tech to improve their work?</li>
+    </ul>
+    <p><strong>Your Task:</strong> Write down <em>one surprising insight</em> you learned and <em>how it might shape your view of service innovation</em>. Be ready to share with the class or post in your learning group.</p>
+
+    <label for="reflection6"><strong>💬 Your Reflection:</strong></label><br>
+    <textarea id="reflection6" name="reflection6" rows="5" style="width:100%; max-width:100%; margin-top: 0.5rem;" placeholder="Type your response here..."></textarea>
+  </div>
+</div>
+ 
+<div class="concept-box">
+  <button class="toggle-btn" onclick="toggleConcept(this)">▶️ AI's Impact on Service</button>
+  <div class="concept-content">
+  <ul>
+    <li>AI is not merely a tool but a transformative force that is reshaping the nature of service interactions, presenting both opportunities and challenges.</li>
+    <li>AI development focuses on both automation (enhancing efficiency and scalability) and augmentation (enhancing human capabilities), both of which have profound implications for service.  </li>
+    <li>The integration of AI in service demands a focus on ethical considerations, trust, responsibility, and human-centered design to ensure that AI serves humanity's best interests.  </li>
+    <li>Terms like trust, responsibility, co-creation, and ethics are core to the service community and are becoming more important in the AI community.  </li>
+  </ul> 
+</div>
+</div> 
+
+<div class="concept-box">
+  <button class="toggle-btn" onclick="toggleConcept(this)">▶️ Automation vs. Augmentation</button>
+  <div class="concept-content">
+  <ul>
+    <li>AI-driven automation can streamline routine service tasks, improving efficiency and reducing costs. </li>
+    <li>AI augmentation enhances the capabilities of service providers, enabling them to deliver more personalized, effective, and innovative services.</li>
+    <li>Both automation and augmentation have the potential to improve service quality, accessibility, and scalability, but they also raise important questions about the future of work and the need for upskilling. </li>
+    <li>The automation AI camp envisioned scaling access to complex, knowledge-intensive service, increasing access to the capabilities provided by experts, while the augmentation AI camp envisioned empowering human professionals, allowing them to solve previously unsolvable complex and urgent problems.  </li>
+  </ul> 
+</div>
+</div> 
+
+<div class="concept-box">
+  <button class="toggle-btn" onclick="toggleConcept(this)">▶️ 🤖 Activity: Future Scenario</button>
+  <div class="concept-content">
+    <p>Imagine a future where AI handles 90% of your job or daily tasks. What would your role become?</p>
+    <p>Would you lead, design, or collaborate differently with machines? Think about how your value contribution might evolve.</p>
+    <p><strong>Your Task:</strong> Write a short paragraph describing your <em>"AI-augmented self"</em> in the future. Be creative, but connect it to how AI changes your actions, decisions, or relationships.</p>
+
+    <label for="futureScenario"><strong>💬 Your Vision:</strong></label><br>
+    <textarea id="futureScenario" name="futureScenario" rows="5" style="width:100%; max-width:100%; margin-top: 0.5rem;" placeholder="Type your response here..."></textarea>
+  </div>
+</div>
+
+
+<div class="concept-box">
+  <button class="toggle-btn" onclick="toggleConcept(this)">▶️ AI's Impact on Service</button>
+  <div class="concept-content">
+  <ul>
+    <li>AI is not merely a tool but a transformative force that is reshaping the nature of service interactions, presenting both opportunities and challenges.</li>
+    <li>AI development focuses on both automation (enhancing efficiency and scalability) and augmentation (enhancing human capabilities), both of which have profound implications for service.  </li>
+    <li>The integration of AI in service demands a focus on ethical considerations, trust, responsibility, and human-centered design to ensure that AI serves humanity's best interests.  </li>
+    <li>Terms like trust, responsibility, co-creation, and ethics are core to the service community and are becoming more important in the AI community.  </li>
+  </ul> 
+</div>
+</div> 
   
       <h3>📚 Additional Resource</h3>
       <ul>
