--- a/myISSIP.html
+++ b/myISSIP.html
@@ -50,7 +50,7 @@
     <div class="section">
       <h2>📘 Section A: Concepts</h2>
       <img src="ethan-hu-NRTptNBkLLw-unsplash.jpg" alt="Ethan" />
-      <p><strong>Time:</strong> 20 minutes</p>
+      <p><strong>Time:</strong> 35 minutes</p>
       <p><strong>Learning Goals:</strong></p>
       <ul>
         <li>Understand the evolving role of service in business and society.</li>
@@ -255,17 +255,47 @@
 
 
 <div class="concept-box">
-  <button class="toggle-btn" onclick="toggleConcept(this)">▶️ AI's Impact on Service</button>
+  <button class="toggle-btn" onclick="toggleConcept(this)">▶️ The Role of Data in AI-Driven Service</button>
   <div class="concept-content">
   <ul>
-    <li>AI is not merely a tool but a transformative force that is reshaping the nature of service interactions, presenting both opportunities and challenges.</li>
-    <li>AI development focuses on both automation (enhancing efficiency and scalability) and augmentation (enhancing human capabilities), both of which have profound implications for service.  </li>
-    <li>The integration of AI in service demands a focus on ethical considerations, trust, responsibility, and human-centered design to ensure that AI serves humanity's best interests.  </li>
-    <li>Terms like trust, responsibility, co-creation, and ethics are core to the service community and are becoming more important in the AI community.  </li>
+    <li>Data is the lifeblood of AI, and its effective use is crucial for delivering personalized, predictive, and proactive services.  </li>
+    <li>Data-driven insights can drive business decisions, improve service offerings, and create network effects. </li>
+    <li>However, the use of data in AI-driven service also raises ethical considerations related to privacy, security, and potential biases.</li>
+    <li>The role of government is important in data matters. </li>
   </ul> 
 </div>
 </div> 
   
+<div class="concept-box">
+  <button class="toggle-btn" onclick="toggleConcept(this)">▶️ The Future of Service in the AI Era</button>
+  <div class="concept-content">
+  <ul>
+    <li>The AI era presents both challenges and opportunities for service innovation. </li>
+    <li>To navigate this era successfully, we need to focus on human-centered design, ethical AI development, and a commitment to creating a future where AI empowers both service providers and service users.  </li>
+    <li>The service research community plays a crucial role in shaping this future by exploring the complex interplay of AI, service, and society. </li>
+    <li>We should upskill and invest wisely in becoming better future versions of ourselves. </li>
+  </ul> 
+</div>
+</div> 
+
+<div class="concept-box">
+  <button class="toggle-btn" onclick="toggleConcept(this)">▶️ 🚀 Final Challenge: Pitch Your AI Service Idea</button>
+  <div class="concept-content">
+    <p>Design a new service powered by AI. Use this simple formula to guide your idea:</p>
+    <p style="margin-left: 1rem;"><strong>"[Who] gets [what value] using [AI capability]"</strong></p>
+    <p>Examples:</p>
+    <ul>
+      <li>“College students get personalized mental health coaching using mood-recognition AI.”</li>
+      <li>“Small restaurants get optimized delivery routes using real-time traffic prediction.”</li>
+    </ul>
+    <p><strong>Your Task:</strong> Write your one-sentence service pitch below. Make it clear, practical, and human-centered.</p>
+
+    <label for="finalPitch"><strong>💬 Your AI-Powered Service Pitch:</strong></label><br>
+    <textarea id="finalPitch" name="finalPitch" rows="4" style="width:100%; max-width:100%; margin-top: 0.5rem;" placeholder="Example: Students get 24/7 writing feedback using an AI essay coach."></textarea>
+  </div>
+</div>
+
+
       <h3>📚 Additional Resource</h3>
       <ul>
         <li><a href="https://www.linkedin.com/in/spohrer/" target="_blank">Jim Spohrer LinkedIn</a> – Connect to request the book.</li>
@@ -273,41 +303,168 @@
       </ul>
     </div>
   </div>
-  <!-- Module 2 -->
-  <div class="page" id="module2">
-    <div class="section">
-      <h2>🤖 Module 2: AI Foundations & Platform Society</h2>
-      <p><strong>Time:</strong> 15 minutes</p>
-      <ul>
-        <li>Automation vs Augmentation</li>
-        <li>Service robots & platforms: Siri, Uber, Amazon, Airbnb</li>
-        <li>Platform Society & Gig Economy</li>
-      </ul>
-      <p><strong>Case:</strong> How does a ride-sharing app use AI for automation & augmentation?</p>
+
+
+<!-- Module 2 -->
+<div class="page" id="module2">
+  <div class="section">
+    <h2>🌍 Section B: ISSIP – Understanding the Organization</h2>
+    <img src="alex-knight-2EJCSULRwC8-unsplash.jpg" alt="Global ISSIP Community" />
+    <p><strong>Time:</strong> 15 minutes</p>
+    <p><strong>Learning Goals:</strong></p>
+    <ul>
+      <li>Understand ISSIP’s mission and structure as a nonprofit community.</li>
+      <li>Explore the give-get-grow philosophy for professional development.</li>
+      <li>Recognize ISSIP’s annual events, programs, and platform roles.</li>
+    </ul>
+
+    <div class="concept-box">
+      <button class="toggle-btn" onclick="toggleConcept(this)">▶️ What is ISSIP?</button>
+      <div class="concept-content">
+        <ul>
+          <li>ISSIP is a non-profit association founded in 2012 to promote service innovation globally.</li>
+          <li>It supports students, professionals, educators, and policymakers through community-driven programs and a platform for shared learning.</li>
+          <li>Key principle: “Service is the application of resources (e.g., knowledge) for the benefit of another.”</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="concept-box">
+      <button class="toggle-btn" onclick="toggleConcept(this)">▶️ Give-Get-Grow Model</button>
+      <div class="concept-content">
+        <ul>
+          <li><strong>Give:</strong> Share your knowledge, time, and skills in the ISSIP community.</li>
+          <li><strong>Get:</strong> Gain exposure to ideas, collaboration, and career opportunities.</li>
+          <li><strong>Grow:</strong> Develop T-shaped skills and advance in your service innovation journey.</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="concept-box">
+      <button class="toggle-btn" onclick="toggleConcept(this)">▶️ Programs & Activities</button>
+      <div class="concept-content">
+        <ul>
+          <li>Annual Service Innovation Excellence Awards</li>
+          <li>Ambassadors Program & Quarterly Community Events</li>
+          <li>Monthly newsletters and recorded webinars via YouTube</li>
+          <li>Academic-Industry collaboration through AI Collab</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="concept-box">
+      <button class="toggle-btn" onclick="toggleConcept(this)">▶️ Platforms & Tools</button>
+      <div class="concept-content">
+        <ul>
+          <li>ISSIP operates across multiple platforms including: LinkedIn, YouTube, Slack, and Mailchimp.</li>
+          <li>Google Workspace is used for program coordination and documentation.</li>
+          <li>Badgr is used for digital credentials and recognition.</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="concept-box">
+      <button class="toggle-btn" onclick="toggleConcept(this)">▶️ 🤝 Activity: ISSIP Impact Match</button>
+      <div class="concept-content">
+        <p>Look at the ISSIP values and find one program or role that resonates with your interests or career goals.</p>
+        <p><strong>Your Task:</strong> Write a short paragraph on how participating in that ISSIP program could help you give, get, and grow.</p>
+        <label for="reflectionISSIP"><strong>💬 Your Reflection:</strong></label><br>
+        <textarea id="reflectionISSIP" name="reflectionISSIP" rows="5" style="width:100%; margin-top: 0.5rem;" placeholder="Type your response here..."></textarea>
+      </div>
     </div>
   </div>
+</div>
 
-  <!-- Module 3 -->
-  <div class="page" id="module3">
-    <div class="section">
-      <h2>🔬 Module 3: Three Perspectives on Service</h2>
-      <h3>🧪 Science</h3>
-      <p>Service science = improving interaction in complex systems. Encourages T-shaped professionals.</p>
-      <h3>🧠 Logic</h3>
-      <p>Service-Dominant Logic = Co-creation of value between actors. Value is not delivered, but co-created.</p>
-      <h3>🏛️ Architecture</h3>
-      <p>Service-Dominant Architecture helps adapt organizations using science + logic principles.</p>
+
+ <!-- Module 3 -->
+<div class="page" id="module3">
+  <div class="section">
+    <h2>🤝 Section C: Participation and Community Engagement</h2>
+    <img src="john-cameron--_5IRj1F2rY-unsplash.jpg" alt="Participation" />
+    <p><strong>Time:</strong> 10 minutes</p>
+    <p><strong>Learning Goals:</strong></p>
+    <ul>
+      <li>Discover ways to actively participate and contribute in ISSIP activities.</li>
+      <li>Understand the importance of T-shaped skills and lifelong learning.</li>
+      <li>Learn about recognition opportunities and professional growth within ISSIP.</li>
+    </ul>
+
+    <div class="concept-box">
+      <button class="toggle-btn" onclick="toggleConcept(this)">▶️ Give-Get-Grow Participation</button>
+      <div class="concept-content">
+        <ul>
+          <li>Give: Volunteer, mentor, or present at ISSIP events.</li>
+          <li>Get: Access thought leadership, workshops, and networking opportunities.</li>
+          <li>Grow: Build T-shaped skills and leadership experience.</li>
+        </ul>
+      </div>
     </div>
-  </div>
 
+    <div class="concept-box">
+      <button class="toggle-btn" onclick="toggleConcept(this)">▶️ Ways to Get Involved</button>
+      <div class="concept-content">
+        <ul>
+          <li>Attend monthly Discovery Summits and Speaker Series.</li>
+          <li>Contribute to ISSIP publications and event planning teams.</li>
+          <li>Nominate peers or yourself for ISSIP Excellence Awards.</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="concept-box">
+      <button class="toggle-btn" onclick="toggleConcept(this)">▶️ Lifelong Learning: T-Shaped Skills</button>
+      <div class="concept-content">
+        <p>ISSIP encourages participants to develop both deep expertise (|) and broad collaboration skills (—) to navigate cross-disciplinary challenges.</p>
+        <p><strong>Example:</strong> A healthcare professional learns about AI ethics and platform strategy to broaden impact.</p>
+        <p><strong>Your Task:</strong> Write a short paragraph on how you plan to develop your T-shaped skills through ISSIP.</p>
+        <label for="Tskills"><strong>💬 Your T-Shaped Skills Plan:</strong></label><br>
+        <textarea id="Tskills" name="Tskills" rows="5" style="width:100%; margin-top: 0.5rem;" placeholder="Type your response here..."></textarea>
+
+    </div>
+</div>
+</div>
+</div>
 
   <!-- Post-Test -->
+  
   <div class="page" id="conclusion">
     <div class="section">
-      <h2>✅ Post-Test</h2>
+      <h2>✅ Let's Wrap It Up: Reflect, Upskill, and Invest in Service Innovation</h2>
       <p><strong>Time:</strong> 10 minutes</p>
-      <p><strong>Purpose:</strong> Measure knowledge gains and retention.</p>
-      <p><strong>Link:</strong> [Insert post-test form or link here]</p>
+
+      <div class="concept-box">
+        <button class="toggle-btn" onclick="toggleConcept(this)">▶️ Recap & Key Takeaways</button>
+        <div class="concept-content">
+          <ul>
+            <li>Service is the application of knowledge for the benefit of others—central to business, society, and human well-being.</li>
+            <li>AI enhances service through <strong>automation</strong> (scaling access) and <strong>augmentation</strong> (amplifying people).</li>
+            <li>Science, Logic, and Architecture offer powerful lenses for designing better interactions and meaningful change.</li>
+            <li>The vision of X+AI (your role + AI support) encourages responsible learning, ethical action, and inclusive innovation.</li>
+            <li>ISSIP empowers participants through <strong>lifelong learning, T-shaped skill building</strong>, and community collaboration.</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="concept-box">
+        <button class="toggle-btn" onclick="toggleConcept(this)">▶️ 📣 Call to Action</button>
+        <div class="concept-content">
+          <p>You now have the tools to think differently about service in the AI era. What will you do next?</p>
+          <ul>
+            <li>🔍 Reflect on your personal and professional service interactions—how can they be enhanced?</li>
+            <li>🧠 Upskill using AI responsibly—grow your capabilities, not just your efficiency.</li>
+            <li>🌍 Join ISSIP’s global community—contribute to <strong>give-get-grow</strong> projects and lifelong learning programs.</li>
+          </ul>
+          <p><strong>Remember:</strong> Investing wisely in better models of service, people, and platforms leads to better futures.</p>
+        </div>
+      </div>
+
+      <div class="concept-box">
+        <button class="toggle-btn" onclick="toggleConcept(this)">▶️ 📝 Post-Test</button>
+        <div class="concept-content">
+          <p><strong>Purpose:</strong> Measure what you’ve learned and reflect on how your understanding of service innovation has evolved.</p>
+          <p><strong>Link:</strong> <a href="https://docs.google.com/forms/d/e/1FAIpQLScWpOJgY_DL7dQeOSWTE_vLL2vgtQw0JOYdXlLuHoo0R5rzdQ/viewform?usp=sharing" target="_blank">Take the Post-Test</a></p>
+        </div>
+      </div>
     </div>
   </div>
 
