--- a/myISSIP.html
+++ b/myISSIP.html
@@ -37,7 +37,7 @@
   </ul>
   <h4>Section B: ISSIP - Ten Learning Items</h4>
   <ul><li>ISSIP content is drawn from the ISSIP Handbook, accessible on the ISSIP.org website. </li>
-  <li>Book: <i>Service Innovation in the AI Era</i> <a href="ISSIP Handbook.pdf" download>Link</a> </li>
+  <li>Book: <i>ISSIP Handbook</i> <a href="ISSIP Handbook.pdf" download>Link</a> </li>
   <li>ISSIP Website: <a href="https://issip.org/">Link</a></li>
   </ul>
 <h4>Section C: Participation - Ten Learning Items</h4>
