--- a/myISSIP.html
+++ b/myISSIP.html
@@ -37,7 +37,7 @@
   </ul>
   <h4>Section B: ISSIP - Ten Learning Items</h4>
   <ul><li>ISSIP content is drawn from the ISSIP Handbook, accessible on the ISSIP.org website. </li>
-  <li>Book: <i>ISSIP Handbook</i> <a href="ISSIP Handbook.pdf" download>Link</a> </li>
+  <li>Book: <i>Service Innovation in the AI Era</i> <a href="ISSIP Handbook.pdf" download>Link</a> </li>
   <li>ISSIP Website: <a href="https://issip.org/">Link</a></li>
   </ul>
 <h4>Section C: Participation - Ten Learning Items</h4>
@@ -465,8 +465,31 @@
           <p><strong>Link:</strong> <a href="https://docs.google.com/forms/d/e/1FAIpQLScWpOJgY_DL7dQeOSWTE_vLL2vgtQw0JOYdXlLuHoo0R5rzdQ/viewform?usp=sharing" target="_blank">Take the Post-Test</a></p>
         </div>
       </div>
+       <h2>🏆 ISSIP Activities and Engagement Opportunities</h2>
+  <p>Beyond this course, ISSIP offers multiple ways to stay engaged and continue growing professionally:</p>
+  <ul>
+    <li><strong>Annual Excellence in Service Innovation Award</strong> – <a href="https://issip.org/awards/" target="_blank">Learn More</a></li>
+    <li><strong>Annual Ambassadors Announcement</strong> – <a href="https://issip.org/about-issip/community/ambassadors/" target="_blank">Meet the Ambassadors</a></li>
+    <li><strong>Quarterly Welcome for Community Participants</strong> – <a href="https://docs.google.com/forms/d/e/1FAIpQLSdh3YlOgs1uhYqbcSsVS3IHmaJH7GuW4oE9k4qg67p-MbQD5Q/viewform" target="_blank">Join Us</a></li>
+    <li><strong>Monthly Newsletter</strong> – <a href="https://issip.org/newsletters/" target="_blank">Subscribe Here</a></li>
+    <li><strong>Discovery Summits & Event Series</strong> – <a href="https://issip.org/issip-2024-event-series-ai-challenges-to-global-democracy/" target="_blank">Explore Events</a></li>
+    <li><strong>Books - Business Expert Press Collaboration</strong> – <a href="https://issip.org/issip-and-bep/" target="_blank">See Publications</a></li>
+    <li><strong>AI Collab - Academic-Industry Collaborations</strong> – <a href="https://issip.org/ai-collab-offering/" target="_blank">Get Involved</a></li>
+    <li><strong>MyT-Me T-Shaped Skills Development Platform</strong> – <a href="https://issip.org/issip-community-first-to-discover-myt-me-shape-with-innovative-new-platform-that-scores-your-t-shape/" target="_blank">Grow Your Skills</a></li>
+    <li><strong>Conferences</strong> – <a href="https://issip.org/2024-upcoming-conferences/" target="_blank">Attend Conferences</a></li>
+    <li><strong>ISSIP YouTube Channel</strong> – <a href="https://www.youtube.com/@ISSIPorg" target="_blank">Watch Recordings</a></li>
+  </ul>
+  
+  <h3>🌟 Activity</h3>
+  <p><strong>Challenge:</strong> Choose one ISSIP program above that interests you the most and set a personal goal to participate within the next 3 months!</p>
+</div>
+</div>
     </div>
   </div>
+
+ 
+
+
 
   <script>
     function showPage(id) {
